# jaraco.postgres

./: .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  NEWS.rst  README.rst  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_postgres.py  tox.ini
.github/workflows/: main.yml
docs/: conf.py  index.rst
jaraco/postgres/: __init__.py  fixtures.py
newsfragments/: +8cdc375c.feature.rst
tests/: test_postgres.py
